Project lab_asset_management {
  database_type: 'SQLServer'
  Note: 'One-LAB asset management. Store timestamps in UTC.'
}

Enum user_role {
  ADMIN
  LAB_MANAGER
  MENTOR
  STUDENT
}

Enum record_status {
  ACTIVE
  INACTIVE
}

Enum semester_status {
  UPCOMING
  ACTIVE
  CLOSED
}

Enum request_status {
  PENDING
  APPROVED
  REJECTED
}

Enum asset_tracking_mode {
  SERIALIZED
  QUANTITY
}

Enum asset_condition {
  GOOD
  FAIR
  DAMAGED
  BROKEN
}

Enum asset_status {
  AVAILABLE
  MAINTENANCE
  UNAVAILABLE
  DISPOSED
}

Enum asset_usage_status {
  IN_USE
  RETURNED
}

Enum inspection_type {
  INSPECTION
  INVENTORY
}

Enum inspection_scope {
  WHOLE_LAB
  SELECTED_ASSETS
}

Enum inspection_status {
  DRAFT
  COMPLETED
}

Enum inspection_result {
  NORMAL
  DISCREPANCY_FOUND
}

Enum incident_type {
  DAMAGE
  MISSING
  LOSS
  MALFUNCTION
  OTHER
}

Enum incident_severity {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

Enum incident_status {
  OPEN
  INVESTIGATING
  RESOLVED
  CLOSED
}

Enum responsibility_status {
  CONFIRMED
  PENDING_REVIEW
  APPROVED
  REJECTED
  RESOLVED
}

Enum maintenance_status {
  PENDING
  APPROVED
  REJECTED
  IN_PROGRESS
  COMPLETED
}

Enum disposal_status {
  PENDING
  APPROVED
  REJECTED
  COMPLETED
}

Table users {
  user_id bigint [pk, increment]
  full_name varchar(100) [not null]
  email varchar(255) [not null, unique]
  password_hash varchar(255) [note: 'Nullable for Google-only accounts']
  google_subject varchar(255) [note: 'Unique when present; Google email domain is unrestricted']
  role user_role [not null]
  status record_status [not null, default: 'ACTIVE']
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]
}

Table student_profiles {
  student_id bigint [pk, increment]
  user_id bigint [not null, unique]
  student_code varchar(30) [not null, unique]
  major varchar(100)
  cohort varchar(30)
  status record_status [not null, default: 'ACTIVE']
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]
}

Table semesters {
  semester_id bigint [pk, increment]
  code varchar(20) [not null, unique]
  name varchar(100) [not null]
  start_date date [not null]
  end_date date [not null]
  status semester_status [not null]
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]
}

Table lab_time_slots {
  slot_id tinyint [pk, note: 'Fixed values 1 through 4']
  slot_name varchar(20) [not null, unique]
  start_time time [not null]
  end_time time [not null]
}

Table lab_usage_requests {
  request_id bigint [pk, increment]
  semester_id bigint [not null]
  mentor_id bigint [not null]
  group_name nvarchar(100) [not null]
  status request_status [not null, default: 'PENDING', note: 'Approval applies to the whole student list']
  request_note nvarchar(max)
  approved_by bigint
  approved_at datetime2
  approval_note nvarchar(max)
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    (request_id, semester_id) [unique]
    semester_id
    mentor_id
    status
  }
}

Table lab_usage_request_slots {
  request_id bigint [not null]
  day_of_week tinyint [not null, note: 'Vietnamese weekday number: 2=Monday through 7=Saturday']
  slot_id tinyint [not null]

  indexes {
    (request_id, day_of_week, slot_id) [pk]
    (day_of_week, slot_id)
  }
}

Table lab_usage_request_students {
  request_id bigint [not null]
  semester_id bigint [not null, note: 'Copied from the request so asset usage can enforce the same semester']
  student_id bigint [not null]
  added_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    (request_id, student_id) [pk]
    (request_id, semester_id, student_id) [unique]
    semester_id
    student_id
  }
}

Table lab_usage_request_student_entries {
  request_id bigint [not null]
  semester_id bigint [not null]
  student_code varchar(30) [not null]
  full_name nvarchar(100) [not null]
  email varchar(255) [not null]
  added_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    (request_id, student_code) [pk]
    (request_id, email) [unique]
    semester_id
  }
}

Table asset_categories {
  category_id bigint [pk, increment]
  category_name nvarchar(100) [not null, unique, note: 'Examples: projector, TV remote, desk, chair, cabinet, IoT, electronics']
  description nvarchar(255)
  status record_status [not null, default: 'ACTIVE']
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]
}

Table assets {
  asset_id bigint [pk, increment]
  asset_code varchar(50) [not null, unique, note: 'Inventory code for serialized assets or stock code for quantity assets']
  asset_name nvarchar(150) [not null]
  category_id bigint [not null]
  tracking_mode asset_tracking_mode [not null]
  serial_number varchar(100) [note: 'Unique when present']
  total_quantity int [not null, default: 1, note: 'Must equal 1 for SERIALIZED assets']
  condition asset_condition [not null]
  status asset_status [not null, default: 'AVAILABLE']
  is_borrowable bit [not null, default: 1, note: '0 for fixed shared utilities; 1 for assets that require a usage record']
  storage_location nvarchar(150) [note: 'Fixed location or normal storage location; never assigned to a student']
  description nvarchar(max)
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    category_id
    status
  }
}

Table asset_usages {
  asset_usage_id bigint [pk, increment]
  request_id bigint [not null, note: 'The whole request must be APPROVED; enforced by the service transaction']
  semester_id bigint [not null]
  student_id bigint [not null]
  asset_id bigint [not null]
  quantity int [not null, default: 1]
  borrowed_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  due_at datetime2 [not null, note: 'Used to find assets not returned by the end of the session']
  returned_at datetime2
  condition_before asset_condition [not null]
  condition_after asset_condition
  status asset_usage_status [not null, default: 'IN_USE']
  note nvarchar(max)
  created_by bigint [not null]
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    (asset_id, status)
    (student_id, status)
    (request_id, semester_id, student_id)
    semester_id
    due_at
  }
}

Table inspection_records {
  inspection_id bigint [pk, increment]
  semester_id bigint [not null]
  inspected_by bigint [not null]
  inspection_type inspection_type [not null]
  scope inspection_scope [not null, note: 'WHOLE_LAB or only the assets listed in inspection_items']
  inspection_date datetime2 [not null, default: `SYSUTCDATETIME()`]
  status inspection_status [not null, default: 'DRAFT']
  result inspection_result
  note nvarchar(max)
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    semester_id
    inspection_date
  }
}

Table inspection_items {
  inspection_item_id bigint [pk, increment]
  inspection_id bigint [not null]
  asset_id bigint [not null]
  expected_quantity int [not null, default: 0]
  actual_quantity int [not null, default: 0]
  expected_condition asset_condition
  actual_condition asset_condition
  discrepancy_type varchar(30)
  discrepancy_note nvarchar(max)
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    (inspection_id, asset_id) [unique]
    asset_id
  }
}

Table incidents {
  incident_id bigint [pk, increment]
  asset_id bigint [not null]
  asset_usage_id bigint
  inspection_item_id bigint
  reported_by bigint [not null]
  affected_quantity int [not null, default: 1]
  incident_type incident_type [not null]
  description nvarchar(max) [not null]
  severity incident_severity [not null]
  status incident_status [not null, default: 'OPEN']
  occurred_at datetime2
  reported_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  investigation_note nvarchar(max)
  handling_result nvarchar(max)
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    asset_id
    asset_usage_id
    inspection_item_id
    status
  }
}

Table responsibilities {
  responsibility_id bigint [pk, increment]
  incident_id bigint [not null, unique]
  student_id bigint [not null]
  determined_by bigint [not null]
  conclusion nvarchar(max) [not null]
  decision nvarchar(max)
  status responsibility_status [not null, note: 'HIGH/CRITICAL incidents start at PENDING_REVIEW; LOW/MEDIUM may start at CONFIRMED']
  reviewed_by bigint
  reviewed_at datetime2
  review_note nvarchar(max)
  resolution_note nvarchar(max)
  determined_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  resolved_at datetime2
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    student_id
    status
  }
}

Table maintenance_records {
  maintenance_id bigint [pk, increment]
  asset_id bigint [not null]
  incident_id bigint
  quantity int [not null, default: 1]
  requested_by bigint [not null]
  description nvarchar(max) [not null]
  requested_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  status maintenance_status [not null, default: 'PENDING']
  approved_by bigint
  approved_at datetime2
  approval_note nvarchar(max)
  repair_started_at datetime2
  repair_completed_at datetime2
  repair_result nvarchar(max)
  note nvarchar(max)
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    asset_id
    incident_id
    status
  }
}

Table disposal_records {
  disposal_id bigint [pk, increment]
  asset_id bigint [not null]
  maintenance_id bigint
  quantity int [not null, default: 1]
  requested_by bigint [not null]
  reason nvarchar(max) [not null]
  requested_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  status disposal_status [not null, default: 'PENDING']
  approved_by bigint
  approved_at datetime2
  approval_note nvarchar(max)
  completed_at datetime2
  completion_note nvarchar(max)
  created_at datetime2 [not null, default: `SYSUTCDATETIME()`]
  updated_at datetime2 [not null, default: `SYSUTCDATETIME()`]

  indexes {
    asset_id
    maintenance_id
    status
  }
}

Ref: student_profiles.user_id > users.user_id
Ref: lab_usage_requests.semester_id > semesters.semester_id
Ref: lab_usage_requests.mentor_id > users.user_id
Ref: lab_usage_requests.approved_by > users.user_id
Ref: lab_usage_request_slots.request_id > lab_usage_requests.request_id [delete: cascade]
Ref: lab_usage_request_slots.slot_id > lab_time_slots.slot_id
Ref: lab_usage_request_students.(request_id, semester_id) > lab_usage_requests.(request_id, semester_id)
Ref: lab_usage_request_students.student_id > student_profiles.student_id
Ref: lab_usage_request_student_entries.(request_id, semester_id) > lab_usage_requests.(request_id, semester_id)
Ref: assets.category_id > asset_categories.category_id
Ref: asset_usages.(request_id, semester_id, student_id) > lab_usage_request_students.(request_id, semester_id, student_id)
Ref: asset_usages.asset_id > assets.asset_id
Ref: asset_usages.created_by > users.user_id
Ref: inspection_records.semester_id > semesters.semester_id
Ref: inspection_records.inspected_by > users.user_id
Ref: inspection_items.inspection_id > inspection_records.inspection_id
Ref: inspection_items.asset_id > assets.asset_id
Ref: incidents.asset_id > assets.asset_id
Ref: incidents.asset_usage_id > asset_usages.asset_usage_id
Ref: incidents.inspection_item_id > inspection_items.inspection_item_id
Ref: incidents.reported_by > users.user_id
Ref: responsibilities.incident_id > incidents.incident_id
Ref: responsibilities.student_id > student_profiles.student_id
Ref: responsibilities.determined_by > users.user_id
Ref: responsibilities.reviewed_by > users.user_id
Ref: maintenance_records.asset_id > assets.asset_id
Ref: maintenance_records.incident_id > incidents.incident_id
Ref: maintenance_records.requested_by > users.user_id
Ref: maintenance_records.approved_by > users.user_id
Ref: disposal_records.asset_id > assets.asset_id
Ref: disposal_records.maintenance_id > maintenance_records.maintenance_id
Ref: disposal_records.requested_by > users.user_id
Ref: disposal_records.approved_by > users.user_id
